// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection Notification renders an connection notification correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Contact Request
      </Text>
    </View>
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "borderRadius": 3,
              "height": 72,
              "width": 72,
            },
            Object {
              "backgroundColor": "rgba(91,84,199,1)",
            },
            Object {
              "padding": 18,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 17.5,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "white",
                "fontSize": 18,
              },
            ]
          }
        >
          1b
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      0x1bc5cbf7...
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Light",
            "fontSize": 16,
            "lineHeight": 22,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      Add as a contact?
    </Text>
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "borderColor": "rgba(74,74,74,1)",
                "borderWidth": 1,
              },
              Object {
                "marginRight": 10,
              },
            ],
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "rgba(74,74,74,1)",
              },
              Object {},
            ]
          }
        >
          Decline
        </Text>
      </View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "borderRadius": 8,
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 15,
              "padding": 10,
            },
            Array [
              Object {
                "backgroundColor": "rgba(91,84,199,1)",
                "marginLeft": 10,
              },
              undefined,
            ],
          ]
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Bold",
                "fontSize": 18,
                "textAlign": "center",
              },
              Object {
                "color": "#FFFFFF",
              },
              Object {},
            ]
          }
        >
          Add Contact
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Connection Notification renders an connection notification that has been authorized correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Contact Request
      </Text>
    </View>
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "borderRadius": 3,
              "height": 72,
              "width": 72,
            },
            Object {
              "backgroundColor": "rgba(91,84,199,1)",
            },
            Object {
              "padding": 18,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 17.5,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "white",
                "fontSize": 18,
              },
            ]
          }
        >
          1b
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      0x1bc5cbf7...
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Light",
            "fontSize": 16,
            "lineHeight": 22,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      Add as a contact?
    </Text>
  </View>
</View>
`;

exports[`Connection Notification renders an connection notification that has been canceled correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 8,
      "elevation": 2,
      "flex": 0,
      "margin": 4,
      "marginBottom": 26,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,0.07)",
      "shadowOffset": Object {
        "height": -1,
        "width": 0,
      },
      "shadowRadius": 12,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flex": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "alignSelf": "stretch",
          "borderBottomColor": "rgba(226,226,226,1)",
          "borderBottomWidth": 1,
          "marginBottom": 19,
          "marginTop": 19,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 22,
            "lineHeight": 30,
            "padding": 19,
            "paddingTop": 0,
            "textAlign": "center",
          }
        }
      >
        Contact Request
      </Text>
    </View>
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 0,
              "justifyContent": "center",
            },
            Object {
              "borderRadius": 3,
              "height": 72,
              "width": 72,
            },
            Object {
              "backgroundColor": "rgba(91,84,199,1)",
            },
            Object {
              "padding": 18,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 17.5,
                "textAlign": "center",
              },
              undefined,
              Object {
                "color": "white",
                "fontSize": 18,
              },
            ]
          }
        >
          1b
        </Text>
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Regular",
            "fontSize": 20,
            "lineHeight": 27,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      0x1bc5cbf7...
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(74,74,74,1)",
            "fontFamily": "NunitoSans-Light",
            "fontSize": 16,
            "lineHeight": 22,
            "textAlign": "center",
          },
          Object {
            "margin": 10,
          },
        ]
      }
    >
      Add as a contact?
    </Text>
  </View>
</View>
`;
